# Software-Engineering

./: .gitignore  README.md
lab_01/: README.md
lab_02/: README.md  docker-compose.yml  mail_service_openapi.json
lab_02/email_service/: pyproject.toml
lab_02/email_service/api/: router.py
lab_02/mail_service/: Dockerfile
lab_02/user_service/: main.py  pyproject.toml
lab_02/user_service/api/: deps.py  router.py
lab_02/user_service/core/: config.py  security.py
lab_02/user_service/schema/: auth.py
lab_03/: README.md  docker-compose.yml  workspace.dsl
lab_03/database/: init.sql
lab_03/email_service/: pyproject.toml
lab_03/email_service/api/: router.py
lab_03/email_service/core/: database.py  security.py
lab_03/email_service/models/: email.py
lab_03/email_service/schema/: email.py
lab_03/user_service/: pyproject.toml
lab_03/user_service/api/: deps.py
lab_03/user_service/core/: config.py  security.py
lab_03/user_service/schema/: auth.py
lab_04/: README.md  docker-compose.yml
lab_04/database/: init.sql
lab_04/email_service/: main.py  pyproject.toml
lab_04/email_service/core/: database.py  init_db.py  security.py
lab_04/user_service/api/: router.py
lab_04/user_service/core/: database.py
lab_04/user_service/models/: user.py
lab_05/: README.md  docker-compose.yml  fill_users.py  get_cache.lua  get_nocache.lua  mail_service_openapi.json  test.sh  usernames.txt
lab_05/email_service/api/: router.py
lab_05/user_service/: pyproject.toml
lab_05/user_service/api/: deps.py  router.py
lab_05/user_service/core/: security.py
(+1 files in other folders)
