[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Naksen <khannanov.rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.10"
pyjwt = "^2.10.1"
sqlalchemy = "^2.0.40"
redis = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
